  E-Mail als Dateianhänge angefügt.

Korrespondierende Mehrsprachigkeit
- Auch bei mehreren Sprachen haben alle Seiten die gleiche ID

News Manager
- Bei den Teasern kann der neue Platzhalter [[TEASER_FULL_TEXT]] verwendet
  werden, um den kompletten Inhalt der News Meldungen auszugeben.
- Kommentarfunktion für Meldungen hinzugefügt.

Modul: Digital Asset Management
- Bei einem Download muss zwingend eine Datei oder URL als Quelle angegeben
  werden.
- Die Gültigkeit (Zeitdauer) eines Downloads kann definiert werden.
- Kategorien können in einer Gruppe zusammengefasst werden.
- Über die Benutzerverwaltung kann beim Erstellen eines neuen Benutzerkontos
  direkt eine neue persönliche Kategorie im Digital Asset Management Modul
  für diesen Benutzer erstellt werden.
- Kopierfunktion für Downloads.
- Die effektiven Zugriffsberechtigungen einer Benutzergruppe oder Benutzers
  können angezeigt werden.
- Neuer Platzhalter [[DOWNLOADS_FILE_MD5]] für die Ausgabe der MD5 Summe eines
  Downloads.
- Der Block "Verwandte Downloads" (downloads_related_file_list) unterstützt
  die gleichen Platzhalter wie bei der Detailseite eines Downloads.
- Für die Erfassung der Beschreibung eines Downloads oder Kategorie steht ein
  WYSIWYG-Editor zur Verfügung.
- Beim Hinzufügen eines Downloads kann ein Benachrichtigungs-E-Mail an
  ausgewählte Benutzergruppen versendet werden.
- Die Auflistung der einer Gruppe zugeordneten Kategorien erfolgt entweder
  alphabetisch oder nach einer benutzerdefinierten Reihenfolge.
- Definitionsmöglichkeit der Herkunft (Intern/Extern) eines Downloads.
- Neuer Platzhalter [[DOWNLOADS_NESTED_CATEGORY_LIST]] für die Ausgabe
  der Rubriken als Baum-Struktur (Explorer Art).
- AJAX Schnittstelle für die Abfrage des Inhalts einer Rubrik.

Modul: Dokumenten System
- Uhrzeit- (nicht nur Datums-) gesteuerte Veröffentlichung von Dokumenten.

Modul: Mediathek
- Das Modul Podcast wurde in Mediathek umbenannt.
- Der Begriff "Kategorie" wurde umbenannt in "Rubrik".